--- a/hiera/common.yaml
+++ b/hiera/common.yaml
@@ -12,7 +12,7 @@ ruby::rbenv_plugins:
 ruby::version::alias:
   2.0.0: 2.0.0-p353
 
-fig::version: '1.0.1'
+docker::version: '1.5.0'
 
 # See https://github.com/boxen/puppet-java for docs
 java::update_version: '71'
